# 42sh

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README  README.md  TODO  doxconf  echo_weird2.sh
doc/: 42sh.1  doxconf
doc/html/: annotated.html  annotated_dup.js  argument__handler_8h_source.html  ast_8h_source.html  classes.html  command__execution_8h_source.html  custom__descriptor_8h_source.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_3ff90d3cb5fc00a3d14ed9f6e146e4c3.html  dir_3ff90d3cb5fc00a3d14ed9f6e146e4c3.js  dir_4cf372765f693cf540fc4810db0c309c.html  dir_4cf372765f693cf540fc4810db0c309c.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5fb1ebb2b05a2a1476ed2247724a112d.html  dir_5fb1ebb2b05a2a1476ed2247724a112d.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_708f671549c405cb60a701c20828fcf6.html  dir_708f671549c405cb60a701c20828fcf6.js  dir_9c32b1df5ae1e446392829f279df2279.html  dir_9e60e2aad88cc740d1e062a1fcef6b85.html  dir_a6a8887241f7db7748189cc91e7d59d7.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_b06aa2129a2c7a1df27e7eac52e5ce56.html  dir_b06aa2129a2c7a1df27e7eac52e5ce56.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b96f6eb2556c01d1ec0a7def4f90d3aa.html  dir_b96f6eb2556c01d1ec0a7def4f90d3aa.js  dir_bd0755c95a42e835fb06f38bbeb1d6ed.html  dir_c15dbabbc7e4beb9dfc7f4d9d94ee497.html  dir_dc6679fee17a9d6c1ddd72cace85556c.html  dir_dc6679fee17a9d6c1ddd72cace85556c.js  dir_dd5c1bafd81f29afbae21880e702d0b7.html  dir_e1aa690b4af0a0538ec65649b0390051.html  dir_e9d2c87952e388da8e570b477721a3fc.html  dir_ef5c0576f312971a50aa286a250e76a8.html  (+48 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  search.css  searchdata.js
doc/latex/: annotated.tex  refman.tex  structast.tex  structast__coll__graph.md5  structcustom__FILE.tex  structlexer.tex  structlexer__coll__graph.md5  structlist.tex  structlist__coll__graph.md5  structlist__item.tex  structlist__item__coll__graph.md5  structmajor.tex  structredir.tex  structtoken.tex  structtoken__coll__graph.md5  structtoken__list.tex  structtoken__list__coll__graph.md5
src/: main.c  structures.h
src/builtins/: alias.c  b_utils.c  break.c  cd.c  continue.c  echo.c  echo_utils.c  exit.c  export.c  shopt.c  shopt_list.c  source.c  unalias.c
src/core/: argument_handler.c  custom_descriptor.c  custom_descriptor.h  main.c
src/execution/: command_execution.c  exec_ast.c  exec_case.c  execution.c  pipe.c  redir.c  variable_assignment.c  variables_substitution.c
src/execution/dollar_substitution/: dollar_at.c  dollar_dollar.c  dollar_ifs.c  dollar_interrogation.c  dollar_oldpwd.c  dollar_random.c  dollar_sharp.c  dollar_star.c  dollar_uid.c  dollar_unknown.c
src/include/: argument_handler.h  ast.h  custom_descriptor.h  exec_ast.h  execution.h  lexer.h  my_utils.h  my_xmalloc.h  parser.h  printer.h  redirection.h  structures.h  tokens.h
src/include/builtins/: alias.h  b_utils.h  break.h  cd.h  continue.h  echo.h  echo_utils.h  exit.h  export.h  shopt.h  source.h  unalias.h
src/include/core/: argument_handler.h  custom_descriptor.h
src/include/execution/: dollar.h  exec_ast.h  exec_case.h  execution.h  pipe.h  redir.h  variable_assignment_exec.h  variables_substitution.h
src/include/lexer/: lexer.h  lexer_cmd.h  lexer_in.h  lexer_operator.h  lexer_redir.h  lexer_utils.h  newlexer.h  string_manipulation.h
src/include/parser/: ast.h  parser.h
src/include/tests/: printer.h
src/include/tokens/: tokens.h
src/include/tokens/execution/: command_execution.h  if_execution.h
src/include/tokens/lexing/: redirection.h
src/include/utils/: char_array_op.h  list.h  major.h  my_err.h  my_utils.h  my_xmalloc.h  stack.h
src/include/variables/: variable_declaration.h  variables.h
src/lexer/: lexer.c  lexer_cmd.c  lexer_in.c  lexer_list.c  lexer_operator.c  lexer_redir.c  lexer_utils.c  newlexer.c  printer.c  string_manipulation.c
src/lexer/tokens/: redirection.c  tokens.c  tokens.h
src/parser/: ast.c  parser.c  parser_bracket.c  parser_case.c  parser_cpdlist.c  parser_for.c  parser_function.c  parser_if.c  parser_operator.c  parser_parenthesis.c  parser_while.c  parser_word.c
src/tokens/: tokens.c
src/tokens/execution/: command_execution.c  if_execution.c
src/tokens/lexing/: redirection.c
src/tokens_exec/: command_execution.c  if_execution.c
src/utils/: char_array_op.c  list.c  major.c  my_err.c  my_utils.h  my_xmalloc.c  stack.c
src/variables/: variable_declaration.c  variables.c
tests/: cmd.yaml  main.c  printer.c  test.yaml
tests/lexer_tests/: lexer_test.c  lexer_test.yaml  obsolete_lexer_test  two_commands_newline
tests/scripts/: tests_script.sh
tests/scripts/test_scripts/: cmd_if_if_cmd.sh  cmd_simple_for.sh  cmd_while.sh  comment_at_end.sh  comment_between_cmds.sh
tests/scripts/test_scripts/alias_tests/: alias_easy.sh  alias_multiple.sh  alias_p.sh  alias_p_multiple_name.sh  alias_print_order.sh  alias_unalias.sh
tests/scripts/test_scripts/and_tests/: cmd_and_cmd.sh  cmd_and_nl_cmd.sh  cmd_nl_and_nl_cmd.sh  trueandtrue.sh
tests/scripts/test_scripts/break_tests/: break_2_out_of_3.sh  break_ast.sh  break_too_much.sh  double_loop.sh  error_negative.sh  error_not_number.sh  error_too_many_args.sh  for_loop.sh  mix.sh  not_in_loop.sh  script.sh  simple.sh  without_arg.sh
tests/scripts/test_scripts/builtins_tests/: cd_multiple_cd.sh  cd_wrong.sh  echo_2_args.sh  echo_E_opt3.sh  echo_bkslash2.sh  echo_bkslash3.sh  echo_e.sh  echo_e_n.sh  echo_e_single_quotes.sh  echo_multiple_lines.sh  echo_multiple_opts_lines.sh  echo_n.sh  echo_simple_quotes_multiple_escapes.sh  echo_strong_quoting_hard.sh  echo_weak_quoting.sh  echo_weak_quoting3.sh  echo_with_E.sh  exit_bad2.sh  export_add_toto.sh  export_remove_toto_eq_tata.sh
(+212 files in other folders)
